# CodeSnippet

./: .gitignore  CMakeLists.txt  checkcpp.bat  main.cpp
source/: manacher.cpp
src/sort/: bubble_sort.cpp  insertion_sort.cpp  merge_sort.cpp  my_sort.h  quick_sort.cpp  selection_sort.cpp
src/string/: manacher.cpp  manacher.h
src/system/: check_endian.cpp  my_system.h
